<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.seojin.myapplication.RegisterActivity"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/register_register" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp"
                android:layout_gravity="center">

                <EditText
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_id"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:id = "@+id/idText"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorPrimary"/>
                <Button
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/register_check"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:id="@+id/validateButton"
                    android:textColor="#ffffff"/>
            </LinearLayout>

            <EditText
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_name"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:id = "@+id/nameText"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"/>
            <EditText
                android:inputType="textPassword"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:id = "@+id/passwordText"
                android:drawableStart="@drawable/ic_https_black_24dp"
                android:drawableLeft="@drawable/ic_https_black_24dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"/>
            <EditText
                android:inputType="textPassword"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_password2"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:id = "@+id/passwordTextCheck"
                android:drawableStart="@drawable/ic_https_black_24dp"
                android:drawableLeft="@drawable/ic_https_black_24dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <RadioGroup
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/gradeGroup"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/grade1"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/register_grade1" />
                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/grade2"
                        android:layout_weight="1"
                        android:text="@string/register_grade2" />
                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/grade3"
                        android:layout_weight="1"
                        android:text="@string/register_grade3" />
                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/grade4"
                        android:layout_weight="1"
                        android:text="@string/register_grade4" />

                </RadioGroup>
            </LinearLayout>

            <Spinner
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:id="@+id/majorSpinner"></Spinner>
            <Button
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/register_join"
                android:id="@+id/registerButton"/>


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
